--- a/main.tex
+++ b/main.tex
@@ -527,7 +527,7 @@ author = {},
 editor = {},
 title = {},
 year = {},
-date = {}
+date = {},
 
 subtitle = {},
 titleaddon = {},
@@ -561,7 +561,7 @@ year = {},
 date = {},
 doi = {},
 eprint = {},
-url = {}
+url = {},
 
 subtitle = {},
 titleaddon = {},
