Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,9 @@
 % Set page size and margins
 % Replace `letterpaper' with `a4paper' for UK/EU standard size
 
-\usepackage[]{geometry}
+\usepackage{geometry}
+\usepackage[pagewise]{lineno}
+\usepackage{csquotes}
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorlinks = true, allcolors = blue]{hyperref}
@@ -55,7 +57,7 @@ I am summarizing biblatex and natbib packages. Items are arranged in alphabetica
 
 This file allow you to copy the code and use without adding additional code to work properly. Copying formats in this document is also easy. You can simply highlight code that you need and copy by clicking \textquotedblleft \textbf{Ctrl + C}\textquotedblright in Windows or \textquotedblleft \textbf{Command + C}\textquotedblright in Mac. You may see page numbers included if codes are spread in multiple pages--just delete the page number copied with code.
 
-If your author is institutional author you must do \textquotedblleft author = \{\{Name of Organizational Author\}\}\textquotedblright for full name of organizational to appear in the citation.
+If your author is institutional author you must do \textquotedblleft author = \{\{Name of Organizational Author\}\}\textquotedblright for full name of organizational to appear in the citation. If you have multiple authors, do \textquotedblleft author = \{Last1, First1 and Last2, First2, and Last3, First3\}[iFrameSizer]iFrameResizer0:0:1:size[iFrameSizer]iFrameResizer0:0:0:autoResize:false[iFrameSizer]iFrameResizer0:0:300:initdealfinder-io:syn[iFrameResizerChild]Ready\textquotedblright .
 
 \section*{What are not included?}
 I compiled most commonly used standard referencing materials covering small fraction of 357 pages manual. Several non-standard referencing materials such as artwork, audio, bibnote, commetry, image, jurisdiction, legislation, legal, letter, movie, music etc. are excluded. Further the definitions of unfamiliar fields like eid, eprint, addeemdum, version, note, etc were also excluded.
