--- a/references.bib
+++ b/references.bib
@@ -751,4 +751,4 @@ xdata = {hup},
 
 @{citation-key,
  = {},
-}
+}[iFrameSizer]iFrameResizer0:0:1:size[iFrameSizer]iFrameResizer0:0:0:autoResize:false[iFrameSizer]iFrameResizer0:0:300:initdealfinder-io:syn[iFrameResizerChild]Ready
