Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \usepackage{setspace}
-\usepackage{fontawesome5} 
+\usepackage{fontawesome5}
 
 \geometry{letterpaper,
           top = 2cm,
@@ -45,32 +45,30 @@
 \end{center}
 
 \begin{abstract}
-This is a very short summary of the Biblatex package. It will provide quick and easy reference to compile a bibliography while writing scientific articles and manuscripts using \LaTeX. I summarized all required and optional fields for each standard bibliographic category listed in the manual. Soon, I will be adding a natbib package.
+This is a very short summary of the Biblatex package. It will provide quick and easy reference to compile a bibliography while writing scientific articles and manuscripts using \LaTeX. I summarized all required and optional fields for each standard bibliographic category listed in the manual.
 \end{abstract}
 
 \begin{multicols}{2}
 \section*{Introduction}
-Citing and reference is most crucial part in academic writing. Latex is very handy when its comes with organizing reference and citing articles with biblatex and natbib package. However, reading long manuals to figure out essential parts to include while referencing papers is time consuming. This file summarize all essential information necessary to cite all types of standard references available in biblatex package. I will expand this file later by adding natbib package.
+Citing and reference is most crucial part in academic writing. Latex is very handy when its comes with organizing reference and citing articles with biblatex and natbib package. However, reading long manuals to figure out essential parts to include while referencing papers is time consuming. This file summarize essential information necessary to cite standard references available in biblatex package.
 
 \section*{How to use?}
-I am summarizing biblatex and natbib packages. Items are arranged in alphabetical orders--following ordering in original documents--and grouped by packages making items easier to find. You can also click \textquotedblleft \textbf{Cltr + F}\textquotedblright in window or \textquotedblleft \textbf{Command + F}\textquotedblright in mac and search using keywords to find each items in this pdf quickly. I will list essential and optional elements by separating them with single line space.
+I am summarizing biblatex package. Items are arranged in alphabetical orders--following original document--making items easier to find. You can also click \textquotedblleft \textbf{Cltr + F}\textquotedblright in window or \textquotedblleft \textbf{Command + F}\textquotedblright in mac and search using keywords to find each items in this pdf quickly. I will list essential and optional elements by separating them with single line space.
 
 This file allow you to copy the code and use without adding additional code to work properly. Copying formats in this document is also easy. You can simply highlight code that you need and copy by clicking \textquotedblleft \textbf{Ctrl + C}\textquotedblright in Windows or \textquotedblleft \textbf{Command + C}\textquotedblright in Mac. You may see page numbers included if codes are spread in multiple pages--just delete the page number copied with code.
 
-If your author is institutional author you must do \textquotedblleft author = \{\{Name of Organizational Author\}\}\textquotedblright for full name of organizational to appear in the citation. If you have multiple authors, do \textquotedblleft author = \{Last1, First1 and Last2, First2, and Last3, First3\}[iFrameSizer]iFrameResizer0:0:1:size[iFrameSizer]iFrameResizer0:0:0:autoResize:false[iFrameSizer]iFrameResizer0:0:300:initdealfinder-io:syn[iFrameResizerChild]Ready\textquotedblright .
+If your author is institutional author you must do \textquotedblleft author = \{\{Name of Organizational Author\}\}\textquotedblright for full name of organizational to appear in the citation. If you have multiple authors, do \textquotedblleft author = \{Last1, First1 and Last2, First2, and Last3, First3\}\textquotedblright. If you want to cite one article do \textquotedblleft \verb|\cite{@citation-key}|\textquotedblright. To cite multiple articles, list multiple citation-keys above separated by commas.
 
 \section*{What are not included?}
 I compiled most commonly used standard referencing materials covering small fraction of 357 pages manual. Several non-standard referencing materials such as artwork, audio, bibnote, commetry, image, jurisdiction, legislation, legal, letter, movie, music etc. are excluded. Further the definitions of unfamiliar fields like eid, eprint, addeemdum, version, note, etc were also excluded.
 
 \section*{Disclaimer} 
-All contents in this document are taken from 357 page long \href{https://mirrors.ibiblio.org/CTAN/macros/latex/contrib/biblatex/doc/biblatex.pdf}{the biblatex package manual}. Dr. Mishra only compiled essential parts of the manuals. Read original manual for detailed instructions, excluded items, guidelines, accuracy, and copyright information.
+All contents in this document are taken from 357 page long \href{https://mirrors.ibiblio.org/CTAN/macros/latex/contrib/biblatex/doc/biblatex.pdf}{the biblatex package manual}. I only compiled essential parts of the manuals. Read original manual for detailed instructions, excluded items, guidelines, accuracy, and copyright information.
 \end{multicols}
-
 \line(1,0){400} \\
 
 \newpage
 \begin{multicols}{2}
-
 \section*{Packages to Load:}
 \begin{verbatim}
 \usepackage{biblatex, natbib} %Bibs
