Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -82,6 +82,7 @@ All contents in this document are taken from 357 page long \href{https://mirrors
 author = {},
 title = {},
 year = {},
+journaltitle = {},
 date = {},
 
 translator = {},
