Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -66,7 +66,6 @@ I compiled most commonly used standard referencing materials covering small frac
 All contents in this document are taken from 357 page long \href{https://mirrors.ibiblio.org/CTAN/macros/latex/contrib/biblatex/doc/biblatex.pdf}{the biblatex package manual}. I only compiled essential parts of the manuals. Read original manual for detailed instructions, excluded items, guidelines, accuracy, and copyright information.
 \end{multicols}
 \line(1,0){400} \\
-
 \newpage
 \begin{multicols}{2}
 \section*{Packages to Load:}
@@ -83,8 +82,13 @@ author = {},
 title = {},
 year = {},
 journaltitle = {},
-date = {},
+volume = {},
+number = {},
+doi = {},
+url = {},
+urldate = {},
 
+date = {},
 translator = {},
 annotator = {},
 commentator = {},
@@ -102,8 +106,6 @@ issuetitleaddon = {},
 language = {},
 origlanguage = {},
 series = {},
-volume = {},
-number = {},
 eid = {}, 
 issue = {},
 month = {},
@@ -113,12 +115,9 @@ note = {},
 issn = {},
 addendum = {},
 pubstate = {},
-doi = {},
 eprint = {},
 eprintclass = {},
 eprinttype = {},
-url = {},
-urldate = {}
 }
 \end{verbatim}
 
