Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -77,11 +77,29 @@ All contents in this document are taken from 357 page long \href{https://mirrors
 \section*{Building Bibliographies:}
 \noindent \textbf{articles:} An article in a journal, magazine, newspaper, or other periodical which forms a self-contained unit with its own title.
 \begin{verbatim}
+Short Version:
 @article{citation-key,
 author = {},
 title = {},
 year = {},
 journaltitle = {},
+volume = {},
+number = {},
+pages = {},
+eid = {},
+doi = {},
+url = {},
+urldate = {}
+}
+
+Long Version:
+@article{citation-key,
+author = {},
+title = {},
+year = {},
+journaltitle = {},
+pages = {},
+eid = {}, 
 volume = {},
 number = {},
 doi = {},
@@ -106,10 +124,8 @@ issuetitleaddon = {},
 language = {},
 origlanguage = {},
 series = {},
-eid = {}, 
 issue = {},
 month = {},
-pages = {},
 version = {},
 note = {},
 issn = {},
