--- a/main.tex
+++ b/main.tex
@@ -664,6 +664,22 @@ urldate = {}
 \vspace{0.5cm}
 \noindent \textbf{proceedings:} A single-volume conference proceedings. This type is very similar to @collection. It supports an optional organization field which holds the sponsoring institution. The editor is omissible.
 \begin{verbatim}
+
+Shorter Version:
+@proceedings{Citation-key,
+title = {},
+author = {},
+year = {},
+pages = {},
+editor = {},
+eventtitle = {},
+venue = {},
+url = {},
+urldate = {},
+eventdate = {}
+}
+
+Longer Version:
 @proceedings{citation-key,
 title = {},
 year = {},
