--- a/main.tex
+++ b/main.tex
@@ -141,6 +141,26 @@ eprinttype = {},
 \vspace{0.5cm}
 \noindent \textbf{book:} A single-volume book with one or more authors where the authors share credit for the work as a whole.
 \begin{verbatim}
+
+Shorter Version:
+@book{Dillman2014,
+author = {},
+title = {}, 
+year = {},
+edition = {},
+isbn = {},
+publisher = {},
+location = {},
+eid = {},
+chapter = {},
+pages = {},
+pagetotal = {},
+doi = {},
+url = {},
+urldate = {}
+}
+
+Longer Version:
 @book{citation-key,
 author = {},
 title = {}, 
