--- a/main.tex
+++ b/main.tex
@@ -782,6 +782,25 @@ urldate = {}
 \vspace{0.5cm}
 \noindent \textbf{inproceedings:} An article in a conference proceedings. This type is similar to @incollection. It supports an optional organization field. \textbf{conference:} A legacy alias for @inproceedings.
 \begin{verbatim}
+
+Shorter Version
+@inproceedings{Citation-key,
+
+author = {},
+title = {},
+booktitle = {},
+year = {},
+editor = {},
+pages = {},
+venue = {},
+organization = {},
+publisher = {},
+location = {},
+eprinttype = {},
+url = {}
+}
+
+longer Version
 @inproceedings{citation-key,
 author = {},
 title = {},
