--- a/main.tex
+++ b/main.tex
@@ -785,18 +785,18 @@ urldate = {}
 
 Shorter Version
 @inproceedings{Citation-key,
-
 author = {},
 title = {},
 booktitle = {},
 year = {},
+volume = {},
 editor = {},
 pages = {},
 venue = {},
+eventtitle = {},
 organization = {},
 publisher = {},
 location = {},
-eprinttype = {},
 url = {}
 }
 
