Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@ I am summarizing biblatex package. Items are arranged in alphabetical orders--fo
 This file allow you to copy the code and use without adding additional code to work properly. Copying formats in this document is also easy. You can simply highlight code that you need and copy by clicking \textquotedblleft \textbf{Ctrl + C}\textquotedblright in Windows or \textquotedblleft \textbf{Command + C}\textquotedblright in Mac. You may see page numbers included if codes are spread in multiple pages--just delete the page number copied with code.
 
 \section*{Some Useful Hints}
-\verb|author = {{US Forest Service}}| and \verb|(\cite{USFS2020})| give (\cite{USFS2020}), \verb|(\cite{mishra2018})| gives (\cite{mishra2018}). \verb|(\cite{m23a, m23b})| gives (\cite{m23a, m23b})[iFrameSizer]iFrameResizer0:0:300:initdealfinder-io:syn[iFrameResizerChild]Ready, \verb|\parencite{mishra 2019}| gives \parencite{mishra2019} and \verb|\cite{mishra2018, mishra2019}| gives \cite{mishra2018, mishra2019}.
+\verb|author = {{US Forest Service}}| and \verb|(\cite{USFS2020})| give (\cite{USFS2020}), \verb|(\cite{mishra2018})| gives (\cite{mishra2018}). \verb|(\cite{m23a, m23b})| gives (\cite{m23a, m23b}), \verb|\parencite{mishra 2019}| gives \parencite{mishra2019} and \verb|\cite{mishra2018, mishra2019}| gives \cite{mishra2018, mishra2019}.
 
 \section*{What are not included?}
 I compiled most commonly used standard referencing materials covering small fraction of 357 pages manual. Several non-standard referencing materials such as artwork, audio, bibnote, commentary, image, jurisdiction, legislation, legal, letter, movie, music etc. are excluded. Further the definitions of unfamiliar fields like eprint, addeemdum, version, note, etc are excluded.
@@ -68,6 +68,7 @@ I compiled most commonly used standard referencing materials covering small frac
 All contents in this document are taken from 357 page long \href{https://mirrors.ibiblio.org/CTAN/macros/latex/contrib/biblatex/doc/biblatex.pdf}{the biblatex package manual}. I only compiled essential parts of the manuals. Read original manual for detailed instructions, excluded items, guidelines, accuracy, and copyright information.
 \end{multicols}
 \line(1,0){400} \\
+[iFrameSizer]iFrameResizer0:0:1:size[iFrameSizer]iFrameResizer0:0:0:autoResize:false[iFrameSizer]iFrameResizer0:0:300:initdealfinder-io:syn[iFrameResizerChild]Ready
 \newpage
 \begin{multicols}{2}
 \section*{Packages to Load:}
