--- a/refs.bib
+++ b/refs.bib
@@ -70,7 +70,7 @@ issn = {},
 url = {https://www.fs.usda.gov/research/treesearch/61618}
 }
 
-@article{citation-key,
+@article{citation-key1,
 author = {},
 title = {},
 year = {},
@@ -84,7 +84,7 @@ url = {},
 urldate = {}
 }
 
-@article{citation-key,
+@article{citation-key2,
 author = {},
 title = {},
 year = {},
