Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -41,8 +41,8 @@
 \begin{center}
 \faIcon{blog} \href{https://bijeshmishra.com/}{https://bijeshmishra.com/}
 \hspace{2cm} 
-\faIcon{at} \href{mailto:bijesh.mishra@okstate.edu}
-{bijesh.mishra@okstate.edu}
+\faIcon{at} \href{mailto:bjs.misra@outlook.com}
+{bjs.misra@outlook.com}
 \end{center}
 
 \begin{abstract}
@@ -54,12 +54,19 @@ This is a very short summary of the Biblatex package. It will provide quick and 
 Citing and reference is most crucial part in academic writing. Latex is very handy when its comes with organizing reference and citing articles with biblatex and natbib package. However, reading long manuals to figure out essential parts to include while referencing papers is time consuming. This file summarize essential information necessary to cite standard references available in biblatex package.
 
 \section*{How to use?}
-I am summarizing biblatex package. Items are arranged in alphabetical orders--following original document--making items easier to find. You can also click \textquotedblleft \textbf{Cltr + F}\textquotedblright in window or \textquotedblleft \textbf{Command + F}\textquotedblright in mac and search using keywords to find each items in this pdf quickly. I will list essential and optional elements by separating them with single line space.
+I am summarizing biblatex package. Items are arranged in alphabetical orders--following original document--making items easier to find. You can also click \textquotedblleft \textbf{Cltr/Command + F}\textquotedblright in Windows/Mac and search using keywords to find each items quickly.
 
-This file allow you to copy the code and use without adding additional code to work properly. Copying formats in this document is also easy. You can simply highlight code that you need and copy by clicking \textquotedblleft \textbf{Ctrl + C}\textquotedblright in Windows or \textquotedblleft \textbf{Command + C}\textquotedblright in Mac. You may see page numbers included if codes are spread in multiple pages--just delete the page number copied with code.
+This file allow you to copy the code and use without adding additional code to work properly. Copying formats in this document is also easy. You can simply highlight code that you need and copy by clicking \textquotedblleft \textbf{Ctrl/Command + C}\textquotedblright in Windows/Mac. You may see page numbers included if codes are spread in multiple pages--just delete the page number copied with code.
 
 \section*{Some Useful Hints}
-\verb|author = {{US Forest Service}}| and \verb|(\cite{USFS2020})| give (\cite{USFS2020}), \verb|(\cite{mishra2018})| gives (\cite{mishra2018}). \verb|(\cite{m23a, m23b})| gives (\cite{m23a, m23b}), \verb|\parencite{mishra 2019}| gives \parencite{mishra2019} and \verb|\cite{mishra2018, mishra2019}| gives \cite{mishra2018, mishra2019}.
+\begin{itemize}
+    \item \verb|author = {{US Forest Service}}| and \verb|(\cite{USFS2020})| \textbf{give} (\cite{USFS2020})
+    \item \verb|(\cite{mishra2018})| \textbf{gives} (\cite{mishra2018})
+    \item \verb|(\cite{m23a, m23b})| \textbf{gives} (\cite{m23a, m23b})
+    \item \verb|\parencite{mishra 2019}| \textbf{gives} \parencite{mishra2019}
+    \item \verb|\cite{mishra2018, mishra2019}| \textbf{gives} \cite{mishra2018, mishra2019}
+    \item \verb|\textcite{mishra2018}| \textbf{gives} \textcite{mishra2018}
+\end{itemize}
 
 \section*{What are not included?}
 I compiled most commonly used standard referencing materials covering small fraction of 357 pages manual. Several non-standard referencing materials such as artwork, audio, bibnote, commentary, image, jurisdiction, legislation, legal, letter, movie, music etc. are excluded. Further the definitions of unfamiliar fields like eprint, addeemdum, version, note, etc are excluded.
@@ -68,7 +75,7 @@ I compiled most commonly used standard referencing materials covering small frac
 All contents in this document are taken from 357 page long \href{https://mirrors.ibiblio.org/CTAN/macros/latex/contrib/biblatex/doc/biblatex.pdf}{the biblatex package manual}. I only compiled essential parts of the manuals. Read original manual for detailed instructions, excluded items, guidelines, accuracy, and copyright information.
 \end{multicols}
 \line(1,0){400} \\
-[iFrameSizer]iFrameResizer0:0:1:size[iFrameSizer]iFrameResizer0:0:0:autoResize:false[iFrameSizer]iFrameResizer0:0:300:initdealfinder-io:syn[iFrameResizerChild]Ready
+
 \newpage
 \begin{multicols}{2}
 \section*{Packages to Load:}
