Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -66,6 +66,7 @@ This file allow you to copy the code and use without adding additional code to w
     \item \verb|\parencite{mishra 2019}| \textbf{gives} \parencite{mishra2019}
     \item \verb|\cite{mishra2018, mishra2019}| \textbf{gives} \cite{mishra2018, mishra2019}
     \item \verb|\textcite{mishra2018}| \textbf{gives} \textcite{mishra2018}
+    \item Format link retrieved date as \verb|urldate = {2024-07-26}|.
 \end{itemize}
 
 \section*{What are not included?}
@@ -74,7 +75,7 @@ I compiled most commonly used standard referencing materials covering small frac
 \section*{Disclaimer} 
 All contents in this document are taken from 357 page long \href{https://mirrors.ibiblio.org/CTAN/macros/latex/contrib/biblatex/doc/biblatex.pdf}{the biblatex package manual}. I only compiled essential parts of the manuals. Read original manual for detailed instructions, excluded items, guidelines, accuracy, and copyright information.
 \end{multicols}
-\line(1,0){400} \\
+%\line(1,0){400} \\
 
 \newpage
 \begin{multicols}{2}
